8265784: [C2] Hoisting of DecodeN leaves MachTemp inputs behind